Imagen corporativa y enlaces a repos

--- a/index.html
+++ b/index.html
@@ -559,6 +559,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 </ul>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Tip</div>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Disponible el <a href="https://github.com/ualmtorres/cassandra-music-rest-api.git">repositorio de GitHub</a> con el código fuente de la API REST desarrollada en este tutorial.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -1264,7 +1278,7 @@ WITH replication = {
 <p><a href="https://gist.github.com/ualmtorres/ca414f89b11765a651e32f9f48b08d42">Script de instalación con Docker para un solo nodo</a></p>
 </li>
 <li>
-<p><a href="https://$$$">Repositorio de GitHub para un clúster de varios nodos con Docker Compose</a></p>
+<p><a href="https://github.com/ualmtorres/CassandraDocker.git">Repositorio de GitHub para un clúster de varios nodos con Docker Compose</a></p>
 </li>
 </ul>
 </div>
@@ -2527,7 +2541,7 @@ app.use('/lastplayedsongs', lastPlayedSongsRouter); <b class="conum">(3)</b>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-04-12 09:34:32 +0200
+Last updated 2024-04-12 09:52:41 +0200
 </div>
 </div>
 </body>
